# ntai

./: .gitignore  .pre-commit-config.yaml  README.md  dprint.json  pyproject.toml
.github/workflows/: deploy.yml
hooks/: build_hooks.py
src/ntai/: __init__.py  cli.py  core.py  server.py  types.py
web/: .prettierrc.js  dprint.json  index.html  package.json  tsconfig.app.json  vite.config.ts
web/src/: App.tsx  fetching.ts  index.css  main.tsx
web/src/components/: Notifications.tsx  SimpleSwitch.tsx  SimpleTooltip.tsx  TooltipComponents.tsx
web/src/components/ui/: badge.tsx  button.tsx  dialog.tsx  drawer.tsx  item.tsx  sheet.tsx  switch.tsx  tooltip.tsx
web/src/features/logs/: index.ts
web/src/features/logs/components/: LogsModal.tsx  Styles.module.css
web/src/features/logs/stores/: logs.ts
web/src/features/settings/: index.ts
web/src/features/settings/components/: SettingsDrawer.tsx  SettingsSheet.tsx
web/src/features/tags/: index.ts
web/src/features/tags/components/: EditPresetDialog.tsx  EditPresetModal.tsx  TagInput.tsx  TagList.tsx  TagMenu.tsx  index.ts
web/src/features/tags/stores/: preset.ts
web/src/features/theming/: index.ts  theme.ts
web/src/features/theming/stores/: theme.ts
web/src/stores/: core.ts
