[project]
name = "ntai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "eeriemyxi", email = "myxi@envs.net" }
]
requires-python = ">=3.13"
dependencies = [
    "cache-decorator>=2.2.0",
    "click>=8.3.1",
    "curl-cffi>=0.14.0",
    "fastapi[standard]>=0.135.3",
    "loguru>=0.7.3",
    "platformdirs>=4.9.4",
    "pydantic>=2.12.5",
    "uvicorn>=0.42.0",
    "yarl>=1.23.0",
]

[project.scripts]
ntai = "ntai.cli:main"

[tool.hatch.build.hooks.custom]
path = "hooks/build_hooks.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
