[project]
name = "myxi-ntai"
description = "Find random nHentai books based on specified search query. Successor of Firush."
readme = "README.md"
authors = [
  { name = "eeriemyxi", email = "myxi@envs.net" },
]
requires-python = ">=3.13"
dependencies = [
  "cache-decorator",
  "click>=8.3.1",
  "curl-cffi>=0.14.0",
  "fastapi[standard]>=0.135.3",
  "loguru>=0.7.3",
  "platformdirs>=4.9.4",
  "pydantic>=2.12.5",
  "uvicorn>=0.42.0",
  "yarl>=1.23.0",
]
dynamic = ["version"]

[project.scripts]
ntai = "ntai.cli:main"
myxi-ntai = "ntai.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "hatchling>=1.29.0",
  "pre-commit>=4.5.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ntai"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hooks/build_hooks.py"

[tool.hatch.build.targets.editable.hooks.custom]
path = "hooks/build_hooks.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "node_modules",
  "web/node_modules",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
enableTypeIgnoreComments = true

[tool.uv.sources]
cache-decorator = { git = "https://github.com/eeriemyxi-contributions/cache_decorator" }

[tool.ruff.lint]
ignore = ["S104", "N806", "C408", "B008"]
